<!-- Copyright 2017 Google Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">shoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Product is empty!</string>
    <string name="added_already_not_saved">Product already added!</string>
    <string name="add_word">Add word</string>
    <string name="comma_hint">Hint: Add many elements - use comma to separate them</string>
    <string name="last_elements_hint">Hint: Click on element to add it</string>
    <string name="last_elements">Last elements:</string>
</resources>